feat: Implement integration tests with StubHttpClient

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ dist/
 
 .env
 .env.local
+!.env.example
 
 *.log
 npm-debug.log*
@@ -17,3 +18,7 @@ Thumbs.db
 .vscode/
 .idea/
 *.tsbuildinfo
+
+vitest.config.js
+vitest.config.d.ts
+vitest.config.*.map
